--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "default",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/cbenjamin2009/Wildfire-Tracker/",
   "dependencies": {
     "@iconify/icons-mdi": "^1.1.15",
     "@iconify/react": "^1.1.4",
@@ -9,6 +10,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "dotenv": "^8.2.0",
+    "gh-pages": "^3.2.3",
     "google-map-react": "^2.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -16,6 +18,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
