--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
-.env
+#.env security is set on google api key to restrict access 
 
 npm-debug.log*
 yarn-debug.log*
